# schneider_challenge

./: pyproject.toml
notebooks/: EDA.ipynb  eda.ipynb
